AUTOMAKE_OPTIONS=foreign
noinst_LTLIBRARIES=libTaskManagershared.la
libTaskManagershared_la_CXXFLAGS=-I$(srcdir)/../$(platform) \
	-I$(archive_dir)/include \
	-I$(unicode_dir)/include \
	-I$(localization_dir)/include \
	-I$(engine_dir)/shared/library/sharedCommandParser/include/public \
	-I$(engine_dir)/shared/library/sharedCompression/include/public \
	-I$(engine_dir)/shared/library/sharedDebug/include/public \
	-I$(engine_dir)/shared/library/sharedFile/include/public \
	-I$(engine_dir)/shared/library/sharedFoundationTypes/include/public \
	-I$(engine_dir)/shared/library/sharedFoundation/include/public \
	-I$(engine_dir)/shared/library/sharedLog/include/public \
	-I$(engine_dir)/shared/library/sharedMath/include/public \
	-I$(engine_dir)/shared/library/sharedMathArchive/include/public \
	-I$(engine_dir)/shared/library/sharedMemoryManager/include/public \
	-I$(engine_dir)/shared/library/sharedMessageDispatch/include/public \
	-I$(engine_dir)/shared/library/sharedNetwork/include/public \
	-I$(engine_dir)/shared/library/sharedNetworkMessages/include/public \
	-I$(engine_dir)/shared/library/sharedObject/include/public \
	-I$(engine_dir)/shared/library/sharedRandom/include/public \
	-I$(engine_dir)/shared/library/sharedRegex/include/public \
	-I$(engine_dir)/shared/library/sharedTemplate/include/public \
	-I$(engine_dir)/shared/library/sharedThread/include/public \
	-I$(engine_dir)/shared/library/sharedUtility/include/public \
	-I$(stlport_dir)/stlport \
	-I$(perforce_dir)/include \
	-I$(fileInterface_dir)/include/public \
	-I$(singleton_dir)/include \
	-I$(unicodeArchive_dir)/include/public \
	-I$(localizationArchive_dir)/include/public \
	-I$(engine_dir)/server/library/serverKeyShare/include/public \
	-I$(engine_dir)/server/library/serverMetrics/include/public \
	-I$(engine_dir)/server/library/serverNetworkMessages/include/public \
	-I$(engine_dir)/server/library/serverUtility/include/public \
	-Wno-ctor-dtor-privacy

libTaskManagershared_la_SOURCES=CentralConnection.cpp \
	CentralConnection.h \
	ConfigTaskManager.cpp \
	ConfigTaskManager.h \
	ConsoleConnection.cpp \
	ConsoleConnection.h \
	Console.cpp \
	Console.h \
	ConsoleImplementation.cpp \
	ConsoleImplementation.h \
	DatabaseConnection.cpp \
	DatabaseConnection.h \
	EnvironmentVariable.h \
	FirstTaskManager.cpp \
	FirstTaskManager.h \
	GameConnection.cpp \
	GameConnection.h \
	Locator.cpp \
	Locator.h \
	ManagerConnection.cpp \
	ManagerConnection.h \
	MetricsServerConnection.cpp \
	MetricsServerConnection.h \
	PlanetConnection.cpp \
	PlanetConnection.h \
	ProcessSpawner.h \
	TaskConnection.cpp \
	TaskConnection.h \
	TaskHandler.cpp \
	TaskHandler.h \
	TaskManager.cpp \
	TaskManager.h \
	TaskManagerSysInfo.h

include $(engine_dir)/../make_include/engine.include
